--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -76,9 +76,9 @@ embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
 
 # PSRAM support
 psram     = []
-psram_2m  = ["esp-hal-common/psram_2m", "psram"]
-psram_4m  = ["esp-hal-common/psram_4m", "psram"]
-psram_8m  = ["esp-hal-common/psram_8m", "psram"]
+psram-2m  = ["esp-hal-common/psram-2m", "psram"]
+psram-4m  = ["esp-hal-common/psram-4m", "psram"]
+psram-8m  = ["esp-hal-common/psram-8m", "psram"]
 
 [profile.release]
 debug = true
@@ -109,7 +109,7 @@ required-features = ["embassy", "embassy-executor-thread", "async"]
 
 [[example]]
 name              = "psram"
-required-features = ["psram_2m"]
+required-features = ["psram-2m"]
 
 [[example]]
 name              = "embassy_serial"
