--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: cd esp-hal-smartled/ && cargo +nightly check --features=esp32h2
       # Check all Xtensa targets:
       - name: check (esp32)
-        run: cd esp-hal-smartled/ && cargo +esp check --features=esp32,xtal_40mhz
+        run: cd esp-hal-smartled/ && cargo +esp check --features=esp32,xtal-40mhz
       - name: check (esp32s2)
         run: cd esp-hal-smartled/ && cargo +esp check --features=esp32s2
       - name: check (esp32s3)
@@ -110,7 +110,7 @@ jobs:
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32-hal (psram)
-        run: cd esp32-hal/ && cargo check --example=psram --features=psram_2m --release # This example requires release!
+        run: cd esp32-hal/ && cargo check --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32-hal/ && cargo doc --features=eh1
@@ -398,7 +398,7 @@ jobs:
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
           cargo check --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32s2-hal (psram)
-        run: cd esp32s2-hal/ && cargo check --example=psram --features=psram_2m --release # This example requires release!
+        run: cd esp32s2-hal/ && cargo check --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32s2-hal/ && cargo doc --features=eh1
@@ -465,8 +465,8 @@ jobs:
       - name: check esp32s3-hal (octal psram and psram)
         run: | # This examples require release!
           cd esp32s3-hal/
-          cargo check --example=octal_psram --features=opsram_2m --release
-          cargo check --example=psram --features=psram_2m --release
+          cargo check --example=octal_psram --features=opsram-2m --release
+          cargo check --example=psram --features=psram-2m --release
       - name: check esp32s3-hal (embassy, log/defmt)
         run: |
           cd esp32s3-hal/
