--- a/esp-hal-procmacros/Cargo.toml
+++ b/esp-hal-procmacros/Cargo.toml
@@ -35,8 +35,8 @@ esp32c2   = []
 esp32c3   = []
 esp32c6   = ["dep:object"]
 esp32h2   = []
-esp32s2   = []
-esp32s3   = []
+esp32s2   = ["dep:object"]
+esp32s3   = ["dep:object"]
 
 interrupt = []
 rtc_slow  = []
