--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,8 +82,8 @@ jobs:
       - name: check esp32-hal (common features)
         run: |
           cd esp32-hal/
-          cargo check --examples --features=eh1,ufmt,log
-          cargo check --examples --features=eh1,ufmt,defmt
+          cargo build --examples --features=eh1,ufmt,log
+          cargo build --examples --features=eh1,ufmt,defmt
       - name: check esp32-hal (embassy)
         run: |
           cd esp32-hal/
@@ -138,8 +138,8 @@ jobs:
       - name: check esp32c2-hal (common features)
         run: |
           cd esp32c2-hal/
-          cargo +nightly check --examples --features=eh1,ufmt,log
-          cargo +nightly check --examples --features=eh1,ufmt,defmt
+          cargo +nightly build --examples --features=eh1,ufmt,log
+          cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c2-hal (async, systick)
         run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c2-hal (async, timg0)
@@ -192,8 +192,8 @@ jobs:
       - name: check esp32c3-hal (common features)
         run: |
           cd esp32c3-hal/
-          cargo +nightly check --examples --features=eh1,ufmt,log
-          cargo +nightly check --examples --features=eh1,ufmt,defmt
+          cargo +nightly build --examples --features=eh1,ufmt,log
+          cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c3-hal (async, systick)
         run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
@@ -249,8 +249,8 @@ jobs:
       - name: check esp32c6-hal (common features)
         run: |
           cd esp32c6-hal/
-          cargo +nightly check --examples --features=eh1,ufmt,log
-          cargo +nightly check --examples --features=eh1,ufmt,defmt
+          cargo +nightly build --examples --features=eh1,ufmt,log
+          cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c6-hal (async, systick)
         run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c6-hal (async, timg0)
@@ -321,8 +321,8 @@ jobs:
       - name: check esp32h2-hal (common features)
         run: |
           cd esp32h2-hal/
-          cargo +nightly check --examples --features=eh1,ufmt,log
-          cargo +nightly check --examples --features=eh1,ufmt,defmt
+          cargo +nightly build --examples --features=eh1,ufmt,log
+          cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32h2-hal (async, systick)
         run: cd esp32h2-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32h2-hal (async, timg0)
@@ -369,8 +369,8 @@ jobs:
       - name: check esp32s2-hal (common features)
         run: |
           cd esp32s2-hal/
-          cargo check --examples --features=eh1,ufmt,log
-          cargo check --examples --features=eh1,ufmt,defmt
+          cargo build --examples --features=eh1,ufmt,log
+          cargo build --examples --features=eh1,ufmt,defmt
       # FIXME: `time-systick` feature disabled for now, see 'esp32s2-hal/Cargo.toml'.
       # - name: check esp32s2-hal (async, systick)
       #   run: cd esp32s2-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick,executor
@@ -426,8 +426,8 @@ jobs:
       - name: check esp32s3-hal (common features)
         run: |
           cd esp32s3-hal/
-          cargo check --examples --features=eh1,ufmt,log
-          cargo check --examples --features=eh1,ufmt,defmt
+          cargo build --examples --features=eh1,ufmt,log
+          cargo build --examples --features=eh1,ufmt,defmt
       - name: check esp32s3-hal (embassy, timg0)
         run: |
           cd esp32s3-hal/
