Unify naming of `RTC_CNTL`/`LP_CLKRST` peripherals

--- a/esp-hal-common/devices/esp32c6/device.toml
+++ b/esp-hal-common/devices/esp32c6/device.toml
@@ -95,4 +95,7 @@ symbols = [
     "gpio_support_deepsleep_wakeup",
     "uart_support_wakeup_int",
     "pm_support_ext1_wakeup",
+
+    # We derive `RTC_CNTL` from `LP_CLKRST` for this device:
+    "rtc_cntl",
 ]
