Add support for 16MB octal PS-RAM (ESP32-S3)

--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -89,6 +89,7 @@ psram-8m = []
 opsram-2m = []
 opsram-4m = []
 opsram-8m = []
+opsram-16m = []
 
 # USB OTG support (ESP32-S2 and ESP32-S3 only! Enabled by default)
 usb-otg = ["esp-synopsys-usb-otg", "usb-device"]
