--- a/esp32-hal/.cargo/config.toml
+++ b/esp32-hal/.cargo/config.toml
@@ -3,8 +3,13 @@ runner = "espflash flash --monitor"
 
 [build]
 rustflags = [
-  "-C", "link-arg=-nostartfiles",
-  "-C", "link-arg=-Wl,-Tlinkall.x",
+  # GCC
+  # "-C", "link-arg=-nostartfiles",
+  # "-C", "link-arg=-Wl,-Tlinkall.x",
+
+  # LLD
+  "-C", "linker=rust-lld",
+  "-C", "link-arg=-Tlinkall.x",
 ]
 target = "xtensa-esp32-none-elf"
 
