--- a/esp32s3-hal/.cargo/config.toml
+++ b/esp32s3-hal/.cargo/config.toml
@@ -4,12 +4,12 @@ runner = "espflash flash --monitor"
 [build]
 rustflags = [
   # GNU LD
-  # "-C", "link-arg=-nostartfiles",
-  # "-C", "link-arg=-Wl,-Tlinkall.x",
+  "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Wl,-Tlinkall.x",
 
   # LLD
-  "-C", "linker=rust-lld",
-  "-C", "link-arg=-Tlinkall.x",
+  # "-C", "linker=rust-lld",
+  # "-C", "link-arg=-Tlinkall.x",
 ]
 target = "xtensa-esp32s3-none-elf"
 
