--- a/esp32c2-hal/.cargo/config.toml
+++ b/esp32c2-hal/.cargo/config.toml
@@ -2,6 +2,7 @@
 runner = "espflash flash --monitor"
 rustflags = [
   "-C", "link-arg=-Tlinkall.x",
+  "-C", "force-frame-pointers",
 
   # comment the cfgs below if you do _not_ wish to emulate atomics.
   # enable the atomic codegen option for RISCV
