--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -55,13 +55,13 @@ ufmt-write = { version = "0.1.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { version = "0.26.0", features = ["critical-section"], optional = true }
-esp32c2 = { version = "0.14.0", features = ["critical-section"], optional = true }
-esp32c3 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b1ce7b", features = ["critical-section"], optional = true }
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b1ce7b", features = ["critical-section"], optional = true }
-esp32s2 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b1ce7b", features = ["critical-section"], optional = true }
+esp32   = { version = "0.27.0", features = ["critical-section"], optional = true }
+esp32c2 = { version = "0.15.0", features = ["critical-section"], optional = true }
+esp32c3 = { version = "0.18.0", features = ["critical-section"], optional = true }
+esp32c6 = { version = "0.8.0",  features = ["critical-section"], optional = true }
+esp32h2 = { version = "0.4.0",  features = ["critical-section"], optional = true }
+esp32s2 = { version = "0.18.0", features = ["critical-section"], optional = true }
+esp32s3 = { version = "0.22.0", features = ["critical-section"], optional = true }
 
 [build-dependencies]
 basic-toml = "0.1.6"
