--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -12,7 +12,7 @@ repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
 [dependencies]
-bitflags             = "2.4.0"
+bitflags             = "2.4.1"
 bitfield             = "0.14.0"
 cfg-if               = "1.0.0"
 critical-section     = "1.1.2"
@@ -22,7 +22,7 @@ embedded-dma         = "0.2.0"
 embedded-hal         = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-1       = { version = "=1.0.0-rc.1", optional = true, package = "embedded-hal" }
 embedded-hal-nb      = { version = "=1.0.0-rc.1", optional = true }
-embedded-io          = "0.5.0"
+embedded-io          = "0.6.1"
 esp-synopsys-usb-otg = { version = "0.3.2", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.7"
 log                  = { version = "0.4.20", optional = true }
@@ -35,11 +35,11 @@ usb-device           = { version = "0.2.9", optional = true }
 
 # async
 embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
-embedded-io-async  = { version = "0.5.0", optional = true }
-embassy-executor   = { version = "0.3.0", features = ["integrated-timers"], optional = true }
-embassy-sync       = { version = "0.3.0", optional = true }
-embassy-time       = { version = "0.1.4", features = ["nightly"], optional = true }
+embedded-io-async  = { version = "0.6.0", optional = true }
+embassy-executor   = { version = "0.3.0", optional = true, features = ["integrated-timers"] }
 embassy-futures    = { version = "0.1.0", optional = true }
+embassy-sync       = { version = "0.3.0", optional = true }
+embassy-time       = { version = "0.1.5", optional = true, features = ["nightly"] }
 
 # RISC-V
 esp-riscv-rt                = { version = "0.5.0", optional = true, path = "../esp-riscv-rt" }
@@ -55,17 +55,17 @@ ufmt-write = { version = "0.1.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { version = "0.26.0", features = ["critical-section"], optional = true }
-esp32c2 = { version = "0.14.0", features = ["critical-section"], optional = true }
-esp32c3 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b1ce7b", features = ["critical-section"], optional = true }
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b1ce7b", features = ["critical-section"], optional = true }
-esp32s2 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "1b1ce7b", features = ["critical-section"], optional = true }
+esp32   = { version = "0.27.0", features = ["critical-section"], optional = true }
+esp32c2 = { version = "0.15.0", features = ["critical-section"], optional = true }
+esp32c3 = { version = "0.18.0", features = ["critical-section"], optional = true }
+esp32c6 = { version = "0.8.0",  features = ["critical-section"], optional = true }
+esp32h2 = { version = "0.4.0",  features = ["critical-section"], optional = true }
+esp32s2 = { version = "0.18.0", features = ["critical-section"], optional = true }
+esp32s3 = { version = "0.22.0", features = ["critical-section"], optional = true }
 
 [build-dependencies]
-basic-toml = "0.1.4"
-serde      = { version = "1.0.188", features = ["derive"] }
+basic-toml = "0.1.6"
+serde      = { version = "1.0.190", features = ["derive"] }
 
 [features]
 esp32   = ["xtensa", "esp32/rt",   "procmacros/esp32",   "xtensa-lx/esp32",   "xtensa-lx-rt/esp32"]
