--- a/esp-hal-procmacros/Cargo.toml
+++ b/esp-hal-procmacros/Cargo.toml
@@ -8,14 +8,14 @@ repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
-features = ["esp32c3", "interrupt", "ram"]
+features = ["esp32c3", "embassy", "interrupt", "ram"]
 
 [lib]
 proc-macro = true
 
 [dependencies]
 darling          = "0.20.3"
-litrs            = "0.4.0"
+litrs            = "0.4.1"
 object           = { version = "0.32.1", optional = true }
 proc-macro-crate = "2.0.0"
 proc-macro-error = "1.0.4"
