--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -55,6 +55,13 @@ sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.4.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+hex-literal       = "0.4.1"
+elliptic-curve    = {version = "0.13.6", default-features = false, features = ["sec1"] }
+p192              = {version = "0.13.0", default-features = false, features = ["arithmetic"] }
+p256              = {version = "0.13.2", default-features = false, features = ["arithmetic"] }
+embassy-sync       = "0.4.0"
+liquid_crystal = "0.1.6"
+fugit            = "0.3.7"
 
 [features]
 default = ["embassy-integrated-timers", "rt", "vectored", "zero-rtc-bss"]
