--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,9 +135,9 @@ jobs:
       - name: check esp32c2-hal (async, timg0)
         run: cd esp32c2-hal/ && cargo +nightly check --examples --release --features=embassy,embassy-time-timg0,async
       - name: check esp32c2-hal (interrupt-preemption)
-        run: cd esp32c2-hal/ && cargo +nightly check --examples --release --features=interrupt-preemption
+        run: cd esp32c2-hal/ && cargo +nightly check --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c2-hal (direct-vectoring)
-        run: cd esp32c2-hal/ && cargo +nightly check --examples --release --features=direct-vectoring
+        run: cd esp32c2-hal/ && cargo +nightly check --example=direct-vectoring --features=direct-vectoring
       - name: check esp32c2-hal (embassy, log/defmt)
         run: |
           cd esp32c2-hal/
@@ -182,10 +182,10 @@ jobs:
         run: cd esp32c3-hal/ && cargo +nightly check --examples --release --features=embassy,embassy-time-timg0
       - name: check esp32c3-hal (async)
         run: cd esp32c3-hal/ && cargo +nightly check --examples --release --features=embassy,embassy-time-systick,async
-      - name: check esp32c3-hal (interrupt-preemption)
-        run: cd esp32c3-hal/ && cargo +nightly check --examples --release --features=interrupt-preemption
-      - name: check esp32c3-hal (direct-vectoring)
-        run: cd esp32c3-hal/ && cargo +nightly check --examples --release --features=direct-vectoring
+      - name: check esp32c6-hal (interrupt-preemption)
+        run: cd esp32c6-hal/ && cargo +nightly check --example=interrupt_preemption --features=interrupt-preemption
+      - name: check esp32c6-hal (direct-vectoring)
+        run: cd esp32c6-hal/ && cargo +nightly check --example=direct-vectoring --features=direct-vectoring
       - name: check esp32c3-hal (embassy, log/defmt)
         run: |
           cd esp32c3-hal/
@@ -234,9 +234,9 @@ jobs:
       - name: check esp32c6-hal (async)
         run: cd esp32c6-hal/ && cargo +nightly check --examples --release --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (interrupt-preemption)
-        run: cd esp32c6-hal/ && cargo +nightly check --examples --release --features=interrupt-preemption
+        run: cd esp32c6-hal/ && cargo +nightly check --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
-        run: cd esp32c6-hal/ && cargo +nightly check --examples --release --features=direct-vectoring
+        run: cd esp32c6-hal/ && cargo +nightly check --example=direct-vectoring --features=direct-vectoring
       - name: check esp32c6-hal (embassy, log/defmt)
         run: |
           cd esp32c6-hal/
@@ -300,9 +300,9 @@ jobs:
       - name: check esp32h2-hal (async)
         run: cd esp32h2-hal/ && cargo +nightly check --examples --release --features=embassy,embassy-time-systick,async
       - name: check esp32h2-hal (interrupt-preemption)
-        run: cd esp32h2-hal/ && cargo +nightly check --examples --release --features=interrupt-preemption
+        run: cd esp32h2-hal/ && cargo +nightly check --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32h2-hal (direct-vectoring)
-        run: cd esp32h2-hal/ && cargo +nightly check --examples --release --features=direct-vectoring
+        run: cd esp32h2-hal/ && cargo +nightly check --example=direct-vectoring --features=direct-vectoring
       - name: check esp32h2-hal (embassy, log/defmt)
         run: |
           cd esp32h2-hal/
