Add some config validations from esp-idf (#325)

--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -33,6 +33,9 @@ cfg-if.workspace = true
 atomic-polyfill = { workspace = true }
 atomic_enum = { workspace = true }
 
+[build-dependencies]
+toml-cfg.workspace = true
+
 [features]
 default = [ "utils", "log" ]
 
